<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">
    <string name="app_name">MoveVApp</string>
    <string name="api_key"></string>

    <string name="detail_screen_title">Movie Details</string>

    <string name="action_settings">Settings</string>
    <string name="action_share">Share</string>

    <string name="action_high_rating">Highest Rated</string>
    <string name="action_most_popular">Most Popular</string>
    <string name="action_most_rating">Most Rated</string>
    <string name="action_favorite">My Favorite</string>

    <string name="label_release_date">Release Date:\u0020\u0020 </string>
    <string name="label_plot">Plot:\u0020\u0020 </string>
    <string name="label_rating">Rating:\u0020\u0020 </string>
    <string name="label_duration">Duration:\u0020\u0020 </string>
    <string name="units_duration">min </string>
    <string name="label_trailers">Trailers:\u0020\u0020 </string>
    <string name="label_reviews">Reviews:\u0020\u0020 </string>

    <string name="text_empty_trailers">No trailers yet </string>
    <string name="text_empty_reviews">No reviews yet </string>

</resources>