<?xml version="1.0" encoding="utf-8"?>
<!-- This is the fragment for tablet - detail screen -->
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/movie_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!-- scrollview can have only one child directly, so use a wrapper layout -->
    <LinearLayout
        android:gravity="center_vertical"
        android:layout_gravity="left"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">

            <ImageView xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="?android:attr/listPreferredItemHeight"
                android:paddingTop="4dp"
                android:paddingBottom="16dp"
                android:gravity="center_vertical"
                android:id="@+id/movie_poster" />

            <ToggleButton
                android:id="@+id/movie_favorite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/favorite"
                android:background="@android:color/transparent"
                android:onClick="onClickMarkFavorite"
                android:textOff=""
                android:textOn="" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="left">

            <TextView xmlns:android="http://schemas.android.com/apk/res/android"
                style="@style/LabelStyle"
                android:text="@string/label_plot" />

            <TextView xmlns:android="http://schemas.android.com/apk/res/android"
                style="@style/DescStyle"
                android:id="@+id/movie_desc" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="left">

                <TextView xmlns:android="http://schemas.android.com/apk/res/android"
                    style="@style/LabelStyle"
                    android:text="@string/label_rating" />
                <RatingBar
                    android:id="@+id/movie_rating"
                    style="@style/RatingBarStyle" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="left">

                <TextView xmlns:android="http://schemas.android.com/apk/res/android"
                    style="@style/LabelStyle"
                    android:text="@string/label_release_date" />
                <TextView xmlns:android="http://schemas.android.com/apk/res/android"
                    style="@style/TextStyle"
                    android:id="@+id/movie_releasedate" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="left">

                <TextView xmlns:android="http://schemas.android.com/apk/res/android"
                    style="@style/LabelStyle"
                    android:text="@string/label_duration" />
                <TextView xmlns:android="http://schemas.android.com/apk/res/android"
                    style="@style/TextStyle"
                    android:id="@+id/movie_duration" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="left"
                android:layout_gravity="left">

                <TextView xmlns:android="http://schemas.android.com/apk/res/android"
                    style="@style/LabelStyle"
                    android:text="@string/label_trailers" />

                <TextView xmlns:android="http://schemas.android.com/apk/res/android"
                    style="@style/ListTextStyle"
                    android:id="@+id/label_empty_trailers"
                    android:text="@string/text_empty_trailers" />

                <com.simplesolutions2003.movevapp.NonScrollListView xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:padding="8dp"
                    android:id="@+id/movie_trailers" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="left">

                <TextView xmlns:android="http://schemas.android.com/apk/res/android"
                    style="@style/LabelStyle"
                    android:text="@string/label_reviews" />
                <TextView xmlns:android="http://schemas.android.com/apk/res/android"
                    style="@style/ListTextStyle"
                    android:id="@+id/label_empty_reviews"
                    android:text="@string/text_empty_reviews" />
                <com.simplesolutions2003.movevapp.NonScrollListView xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:padding="8dp"
                    android:id="@+id/movie_reviews" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</ScrollView>
